# lu-nix

./: .editorconfig  .gitignore  APPLIANCE.md  Cargo.toml  README.md  biome.json  flake.nix  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
.cargo/: config.toml
apps/web/: package.json
apps/web/src/: index.ts
crates/core/: Cargo.toml
crates/core/src/: lib.rs
home/luke/: appliance.nix  bootstrap.nix  cloud-sync.nix  default.nix  desktop.nix  dms-settings.json  dms.nix  editors.nix  gaming.nix  niri.nix  packages.nix  productivity.nix  shell.nix  vscode-settings.json
home/luke/appliance/: foot.nix  hyprland.nix  provision.nix
home/luke/config/: dms-settings.json
home/luke/desktop/: arch-gl.nix  dms.nix  foot.nix  hyprland.nix  niri.nix  qt.nix  services.nix  settings.nix  spicetify.nix  vscode.nix
home/luke/desktop/bootstrap-qs/: GlassCard.qml  SetupPage.qml  WallpaperPage.qml  bootstrap.sh  shell.qml
home/luke/desktop/settings-app/: BootstrapPage.qml  CloudSyncPage.qml  DebugPage.qml  GlassCard.qml  InfoRow.qml  ServicesPage.qml  SystemInfoPage.qml  WallpapersPage.qml  shell.qml
hosts/appliance/: default.nix
hosts/appliance-bare/: default.nix
hosts/desktop/: default.nix
hosts/laptop/: default.nix
hosts/vm-dev/: default.nix
modules/: core.nix  default.nix  development.nix  graphical.nix
modules/graphical/: niri.nix
modules/services/: default.nix  raia.nix
