[workspace]
members = ["crates/core"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.85"
version = "0.1.0"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata]
description = "Rust workspace for lu-nix"
